refactored added implementation of a charts

--- a/inzynierstwo/analizaproblemu.tex
+++ b/inzynierstwo/analizaproblemu.tex
@@ -20,7 +20,7 @@ Podejście Kanban to jedna z metodyk wspomagająca zarządzanie zadaniami. Poleg
 	
 	\centering
 	\includegraphics[width=0.90\textwidth]{tablica_kanban}		
-	 \caption{Prosta tablica Kanban \newline Źródło: $https://agilecommander.com/wp-content/uploads/2018/03/doc\_pl\_prosta\_tablica\_kanban.png $}
+	 \caption{Prosta tablica Kanban}
 \end{figure}
 
 
@@ -57,7 +57,7 @@ Użytkownicy mogą posiadać dwie role, admina i zwykłego użytkownika. Różni
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.90\textwidth]{tablica-operacyjna}		
-	\caption{Przykładowa tablica Kanban w aplikacji Trello \newline Źródło: $https://zerobs.pl/wp-content/uploads/2019/11/tablica-operacyjna.jpg $}
+	\caption{Przykładowa tablica Kanban w aplikacji Trello}
 \end{figure}
 
 \indent  Kolejną aplikacją jest LeanKit, która została wybrana jako druga aplikacja do porównania, ponieważ tej tablicy nie charakteryzuje prostota. Wręcz przeciwnie, jej atutem są złożone funkcje tworzenia tablicy. Najbardziej charakterystyczną opcją jest skomplikowane tworzenie karty na tablicy. Poprzednia aplikacja pozwalała na tablicy utworzyć karty przetrzymujące zadania, które można przenosić z jednej karty na drugą. Aplikacja oferuje Tworzenie Karty, podkart karty, podkart podkart, i tak dalej, przez co bardziej skomplikowane do skategoryzowania zadania użytkownik jest w stanie opisać w jednym miejscu. Zadania posiadają podobne atrybuty do Trello, oprócz tego posiadają jeszcze dziedziczenie zadań, to znaczy, że każde zadanie ma listę zadań rodziców i listę zadań dzieci. Są to listy przetrzymujące odnośniki do zadań, z wyniku których powstało dane zadanie (rodzice), lub zadania, które zostały utworzone przez dane zadanie (dzieci). 
