--- a/inzynierstwo/interfejsuzytkownika.tex
+++ b/inzynierstwo/interfejsuzytkownika.tex
@@ -1,5 +1,5 @@
 \chapter{Interfejs użytkownika}
-
+wstawienie skrinów aplikacji zauważenie ciekawych mechanizmów html css cytat książka html css
 \section{Widok Logowania}
 \section{Widok Listy Zadań}
 \section{Widok Admina}
