--- a/inzynierstwo/literatura.bib
+++ b/inzynierstwo/literatura.bib
@@ -53,6 +53,18 @@ url={https://spring.io/projects/spring-security}
 	url={https://www.postman.com/api-documentation-tool/}
 }
 
+@misc{diagrams,
+	title={Diagrams tool},
+	howpublished={Web pages: \url{https://www.diagrams.net/}},
+	url={https://www.diagrams.net/}
+}
+
+@misc{MdbAngularBootstrap,
+	title={Spring Security Overview},
+	howpublished={Web pages: \url{https://mdbootstrap.com/docs/angular/advanced/charts/#docsTabsOverview}},
+	url={https://mdbootstrap.com/docs/angular/advanced/charts/#docsTabsOverview}
+}
+
 
 @book{HTML-CSS,
     author={Ben Frain},
