from laptop going back to pc

--- a/inzynierstwo/literatura.bib
+++ b/inzynierstwo/literatura.bib
@@ -9,7 +9,7 @@
 	howpublished={Web pages: \url{https://start.spring.io}},
 	url={https://start.spring.io}
 }
-draganddrop
+
 @misc{draganddrop,
 	title={Drag Drop Event Angular Overview},
 	howpublished={Web pages: \url{https://material.angular.io/cdk/drag-drop/overview}},
@@ -71,6 +71,14 @@ url={https://spring.io/projects/spring-security}
     title={Responsive Web Design with HTML5 and CSS3},
     publisher={Packt Publishing},
     year={2012}
+}
+
+
+@book{db,
+	author={Christopher J. Date},
+	title={An Introduction to Database Systems},
+	publisher={Pearson},
+	year={2003}
 }
 
 
