--- a/inzynierstwo/praca.tex
+++ b/inzynierstwo/praca.tex
@@ -4,7 +4,6 @@
 \documentclass{book}
 
 
-
 % Pakiet babel dla polskiego języka powoduje konflikt z pakietem amssymb.
 % Polecenie '\lll' definiują oba pakiety - porządana jest druga definicja.
 \let\lll\undefined
@@ -33,6 +32,7 @@
 
 % Wprowadza rozszerzony zestaw symboli m.in. \leadsto
 \usepackage{amssymb}
+
 
 % Dodatkowa, ,,kręcona'' czcionka matematyczna
 \usepackage{mathrsfs}
@@ -278,6 +278,77 @@
 	\renewcommand{\footrulewidth}{0.2pt}		% Grubość linii w stopce
 }
 
+\fancypagestyle{figurespis}{
+	\fancyhf{}									% wyczyść stopki i nagłówki
+	\fancyhead[RO]{								% Prawy, nieparzysty nagłówek
+		\hrulefill \hspace{16pt} \large Spis ilustracji \thechapter
+		\put(-472.1, 12.1){%
+			\makebox(0,0)[l]{%
+				\includegraphics[width=0.05\textwidth]{pwr-logo}
+			}
+		}
+		\put(-443,5.5){%
+			\makebox(0,0)[l]{%
+				\small Politechnika Wrocławska
+			}
+		}
+	}
+	\fancyhead[LE]{								% Lewy, parzysty nagłówek
+		\large Spis ilustracji  \hspace{16pt} \hrulefill 
+		\put(-22, 12.1){%
+			\makebox(0,0)[l]{%
+				\includegraphics[width=0.05\textwidth]{wppt-logo}
+			}
+		}
+		\put(-210,5.5){%
+			\makebox(0,0)[l]{%
+				\small Wydział Podstawowych Problemów Techniki
+			}
+		}
+	}
+	\fancyfoot[LE,RO]{							% Stopki
+		\thepage
+	}
+	\renewcommand{\headrulewidth}{0pt}			% Grubość linii w nagłówku
+	\renewcommand{\footrulewidth}{0.2pt}		% Grubość linii w stopce
+}
+
+
+\fancypagestyle{listingsSpis}{
+	\fancyhf{}									% wyczyść stopki i nagłówki
+	\fancyhead[RO]{								% Prawy, nieparzysty nagłówek
+		\hrulefill \hspace{16pt} \large Spis kodów źródłowych \thechapter
+		\put(-472.1, 12.1){%
+			\makebox(0,0)[l]{%
+				\includegraphics[width=0.05\textwidth]{pwr-logo}
+			}
+		}
+		\put(-443,5.5){%
+			\makebox(0,0)[l]{%
+				\small Politechnika Wrocławska
+			}
+		}
+	}
+	\fancyhead[LE]{								% Lewy, parzysty nagłówek
+		\large Spis kodów źródłowych  \hspace{16pt} \hrulefill 
+		\put(-22, 12.1){%
+			\makebox(0,0)[l]{%
+				\includegraphics[width=0.05\textwidth]{wppt-logo}
+			}
+		}
+		\put(-210,5.5){%
+			\makebox(0,0)[l]{%
+				\small Wydział Podstawowych Problemów Techniki
+			}
+		}
+	}
+	\fancyfoot[LE,RO]{							% Stopki
+		\thepage
+	}
+	\renewcommand{\headrulewidth}{0pt}			% Grubość linii w nagłówku
+	\renewcommand{\footrulewidth}{0.2pt}		% Grubość linii w stopce
+}
+
 % Osobny styl dla stron zaczynających rozdział/spis treści itd. (domyślnie formatowane jako "plain")
 \fancypagestyle{chapterBeginStyle}{
 	\fancyhf{}%
@@ -451,25 +522,14 @@
 \newtheorem{corollary}{Wniosek}[chapter]
 
 % Środowisko do definicji
-\newtheorem{definition}{Definicja}[chapter]
+\usepackage{amsthm}
+\usepackage{thmtools}
 
-% Środowisko do dowodów
-\newenvironment{proof}{
-	\par\noindent \textbf{Dowód.}
-}{
-\begin{flushright}
-	\vspace*{-6mm}\mbox{$\blacklozenge$}
-\end{flushright}
-}
+\theoremstyle{definition}
+\newtheorem*{definition}{Definicja}
 
-% Środowisko do uwag
-\newenvironment{remark}{
-	\bigskip \par\noindent \small \textbf{Uwaga.}
-}{
-\begin{small}
-	\vspace*{4mm}
-\end{small}
-}
+
+
 
 
 \hyphenation{wszy-stkich ko-lu-mnę każ-da od-leg-łość
@@ -561,14 +621,17 @@
 	\pagestyle{bibliographyStyle}
 	\bibliographystyle{plabbrv}
 	\bibliography{literatura}
-	\thispagestyle{chapterBeginStyle}
+
     \addcontentsline{toc}{chapter}{Bibliografia}
 
 	\cleardoublepage
-
+	\pagestyle{figurespis}
 	\listoffigures
+	    \addcontentsline{toc}{chapter}{Spis rysunków}
 	\cleardoublepage
+		\pagestyle{listingsSpis}
 	\lstlistoflistings
+		    \addcontentsline{toc}{chapter}{Spis kodów źródłowych}
 	\cleardoublepage
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% DODATKI %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
