interface is being described

--- a/inzynierstwo/analizaproblemu.tex
+++ b/inzynierstwo/analizaproblemu.tex
@@ -60,7 +60,7 @@ Użytkownicy mogą posiadać dwie role, admina i zwykłego użytkownika. Różni
 	\caption{Przykładowa tablica Kanban w aplikacji Trello}
 \end{figure}
 
-\indent  Kolejną aplikacją jest LeanKit, która została wybrana jako druga aplikacja do porównania, ponieważ tej tablicy nie charakteryzuje prostota. Wręcz przeciwnie, jej atutem są złożone funkcje tworzenia tablicy. Najbardziej charakterystyczną opcją jest skomplikowane tworzenie karty na tablicy. Poprzednia aplikacja pozwalała na tablicy utworzyć karty przetrzymujące zadania, które można przenosić z jednej karty na drugą. Aplikacja oferuje Tworzenie Karty, podkart karty, podkart podkart, i tak dalej, przez co bardziej skomplikowane do skategoryzowania zadania użytkownik jest w stanie opisać w jednym miejscu. Zadania posiadają podobne atrybuty do Trello, oprócz tego posiadają jeszcze dziedziczenie zadań, to znaczy, że każde zadanie ma listę zadań rodziców i listę zadań dzieci. Są to listy przetrzymujące odnośniki do zadań, z wyniku których powstało dane zadanie (rodzice), lub zadania, które zostały utworzone przez dane zadanie (dzieci). 
+\indent  Kolejną aplikacją jest LeanKit, która została wybrana jako druga aplikacja do porównania, ponieważ tej tablicy nie charakteryzuje prostota. Jej atutem są złożone funkcje tworzenia tablicy. Najbardziej charakterystyczną opcją jest skomplikowane tworzenie karty na tablicy. Poprzednia aplikacja pozwalała na tablicy utworzyć karty przetrzymujące zadania, które można przenosić z jednej karty na drugą. Aplikacja oferuje Tworzenie Karty, podkart karty, podkart podkart, i tak dalej, przez co bardziej skomplikowane do skategoryzowania zadania użytkownik jest w stanie opisać w jednym miejscu. Zadania posiadają podobne atrybuty do Trello, oprócz tego posiadają jeszcze dziedziczenie zadań, to znaczy, że każde zadanie ma listę zadań rodziców i listę zadań dzieci. Są to listy przetrzymujące odnośniki do zadań, z wyniku których powstało dane zadanie (rodzice), lub zadania, które zostały utworzone przez dane zadanie (dzieci). 
 Poza skomplikowaną reprezentacją tablicy Kanban, LeanKit posiada wiele funkcji po wizualizacje zadań w kalendarzu, możliwość wertykalnej i horyzontalnej tablicy (jak i wertykalno-horyzontalnej), raporty w postach czystych danych lub wykresów czy też tworzenia zależności pomiędzy wieloma innymi projektami i tablicami.
 Jest to aplikacja posiadająca kompleksowe konfiguracje, użytkownik korzystający z programu po raz pierwszy najprawdopodobniej potrzebowałby specjalistycznego szkolenia w celu wykorzystania wszystkich możliwości.
 
