--- a/inzynierstwo/projektaplikacji.tex
+++ b/inzynierstwo/projektaplikacji.tex
@@ -7,7 +7,7 @@ Tworzenie aplikacji internetowej to skomplikowany proces, który może przysporz
 
 \section{Wzorzec architektoniczny Model-View-Controller}
 System zbudowany został w oparciu o model MVC, czyli Model-View-Controller.
-Jest to podejście architektoniczne, które dzieli aplikacje na trzy główne komponenty.
+Jest to podejście architektoniczne, które dzieli aplikację na trzy główne komponenty.
 Model, odpowiedzialny za dostęp i przechowywanie danych. View, czyli widok odpowiada za interfejs użytkownika, jak dane są przedstawiane i odbierane. Controller zajmuje się logiką biznesową komunikując się z modelem i widokiem. Widok dostarcza informacje od klienta, które obsługiwane są przez Controller i odpowiednie zmiany wprowadzane są do modelu. \cite{6827095}
 
 \begin{figure}[h]
